<resources>
    <string name="app_name">Bagan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pagoda">Pagodas</string>
    <string name="home">Home</string>
    <string name="article">Article</string>
    <string name="contact">Contact</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="v_1_0">version 1.0</string>
    <string name="total_found">total found:</string>
    <string name="contact_us">Contact Us</string>
    <string name="dark_mode">Dark mode</string>
    <string name="includes_taxes_and_changes">includes taxes and changes</string>
    <string name="mmk">MMK</string>
    <string name="price_for_1_night">Price for 1 night</string>
    <string name="price_for_2_person">Price for 2 person</string>
    <string name="facilities">Facilities</string>
    <string name="pagodas">Pagodas</string>
    <string name="hotels">Hotels</string>
    <string name="highlights">HighLights</string>
    <string name="exit">Exit</string>
    <string name="confirm_your_action">Confirm your action</string>
    <string name="confirm">Are you sure to exit this awesome application?</string>
    <string name="cancel">Cancel</string>
    <string name="app_theme">Theme</string>
    <string name="BackgroundColorPickerPreference">BackgroundColorPickerPreference</string>
    <string name="ToolbarColorPickerPreference">ToolbarColorPickerPreference</string>
    <string name="ok">OK</string>

    <string-array name="languages">
        <item>English</item>
        <item>Myanmar</item>
    </string-array>
</resources>