<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_height="match_parent"
    android:layout_width="match_parent">

    <com.skydoves.colorpickerpreference.ColorPickerPreference
        android:key="@string/BackgroundColorPickerPreference"
        android:summary="changes background color"
        android:title="Background Color"
        app:default_color="@color/darkColor"
        app:iconSpaceReserved="false"
        app:preference_attachAlphaSlideBar="false"
        app:preference_attachBrightnessSlideBar="true"
        app:preference_colorBox_radius="26dp"
        app:preference_dialog_negative="@string/cancel"
        app:preference_palette="@drawable/palettebar"
        app:preference_dialog_positive="@string/ok"
        app:preference_dialog_title="Choose your preferred color"
        app:preference_selector="@drawable/ic_selection" />

</androidx.preference.PreferenceScreen>
